# job_search

./: .gitignore  AGENTS.md  Cargo.toml  askama.toml  devenv.nix  flake.nix  providers.md
.cargo/: config.toml
.pi/: APPEND_SYSTEM.md
.sqlx/: query-015a6ff65704cba1f3120c13d8f9c47bd33f3a11c50240bfec20fc83e84b5a52.json  query-0281363142569eaa43408de61f96f6a92f8babfc23b9094c8e6fbebd5c92ef3f.json  query-046d1d3a2282e2ebed4989e3de94ae36c7cc97a6f02bf9a763f28acaea38e59c.json  query-05a20fe2f3fd4bf9c6c4d03dd0bd247f3cdfcf20ab76e84577ccd8309589b970.json  query-0bf51210d9ef390cfd95d355743bc2dd54df1b5ed2a646acf800ee024cfa0c1d.json  query-0eef17cbb2161bb1178377a463ec358f180d54428fb561527e9e4027d48a4a71.json  query-0ffad93e0615f02135bcb717511b94731d29babfb894eb69ce8cbedb4e99d78f.json  query-12c240e451b5f14b641d876db1061b9ec4696aabcb0e7abdca33ee587ad0a79b.json  query-1eb1d15178134404e6addc21b79c20a21c7021a55f8f23201110ee5c7f98f521.json  query-28c72a154fe2aea8bfee34398e48c5cfad28883cb3bb8f5b92bcd2182d45fe32.json  query-290d13c646f53a9e68ca561f4a7e799f439aa954b226559bd83a32806db96bee.json  query-2b9238c6bacb7fd6f2274bb218522e9c2a69c748ff083e204b80e8b944858ffb.json  query-34b1d631114d893efc98c06392f051a11661fc4540aaaf2501fa2b26e54150cf.json  query-3d8b8b878b74086eae8d0656963c5a91cb3a5f009d4dfb2aeba948127d7fcdf4.json  query-401d2849df8b6e408310e9f9cf5cd861a0be1305c10e20120b5dcb9ebaa8c4d9.json  query-420fcd05406ce306ab862d04f1549e4c2fce042407633f605943c645513323e0.json  query-46da071999a2b768156e1c9f51d443fb9859ac7c463d6b9fecb0dac2d3f6bccb.json  query-4869f39cf0dd64de6d6f6a2c65a6ccbbdf6772a813377a07e8098125d4d045b4.json  query-49053e83c521f541958221855da5a3aa6a873bd59c47b50a16924867ff9b9018.json  query-4c785fdbc49868a4f18a847bcc22c75404e0667c8996d46ac516d31465b7286c.json  query-4d652c74c24fcf8ddb780134252bd6852ea113a97c0db42d8d3adb4837778c4e.json  query-4efdbbeaa39af371855eca69e82af740bdb94078c8e935c754972923e3d19866.json  query-52a2b96136dcf7badddb44be219d9e99d698fe41949a8da06b9ab7722477cb71.json  query-5f6495b7d066a2420437017e363fedf1ea602c8573f9d5d6d415fef41595e6ad.json  query-5fef5ae2dd439a32a0ae375d05cb95a65ed2bcd0b5c49c633d7554cf15e08de7.json  query-63e2ed24084e2ee0aae049fe40a5fe3ce4d6b44b894b77086830f9672daa8e7a.json  query-67d34e010f354dfad6ce2816adeb9a8bfa13200589470fe6f2cc3505ab4c893f.json  query-74785210b32b47cb24017e192692ce348fd35c8fe409b38a854518b1d8c612cc.json  query-77f1130621bff1f388ad7df2b71472e6d681215665e0122e85add11757a17fd6.json  query-791242c9eb7db12d05d3a8be024c92de0e1ffeb4c333ea67b77754c128029c07.json  query-793d74b4016da92a4d1b2d9b647a3196b669f94382fd061210c15e01a54891c7.json  query-7a491c27155829c9605df76a90e6974aec0fcafd05eab4a41799440addc23603.json  query-7ad3b370a8b44e2a8a7fd1ee97b1febba77aae55580786d9c2cede92acc4e91b.json  query-7b12894016f42e7fbef7bf35e598d47b9b027494d431a8f1adfb6cfcd34cfa00.json  query-853990fc212a88089fef0cf618ead598f322e14efe45c8f93ae8500c452c36f5.json  query-8599db14d540f9f312ebd84f110b1e7ca9d9e6f2f8166e9d54576df1c62966c2.json  query-85f189d193c39dbdfe7d3c766b0ef4e218511d45efccbe98b47209de076ada52.json  query-869bd3bbc12e25db804d4ff4e481f2e2acfcd6059825d268a829f037c8e766a0.json  query-878d98498e971f30818911cc54002bf721a332c9a69dea95415df911f87f10de.json  (+32 more)
frontend/: biome.json  index.html  orval.config.js  package.json  (+4 more)
(+190 files in other folders)
