[package]
name = "jobsearch"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2"

chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
directories = "6"
futures = "0.3"
html2text = "0.14"
include_dir = "0.7"
mime_guess = "2.0"
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
regex = "1"
serde_json = "1"
url = "2"
urlencoding = "2"
shellexpand = { version = "3", features = ["path"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }
tokio = { version = "1", features = ["full"] }
chromiumoxide = "0.9"

[dev-dependencies]
tempfile = "3"
