[package]
name = "jobsearch"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2"

askama = "0.16"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
directories = "6"
async-stream = "0.3"
futures = "0.3"
html2text = "0.14"
include_dir = "0.7"
mime_guess = "2.0"
owo-colors = "4"
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
shell-words = "1"
regex = "1"
schemars = "1"
serde_json = "1"
url = "2"
urlencoding = "2"
shellexpand = { version = "3", features = ["path"] }
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }
tokio = { version = "1", features = ["full"] }
chromiumoxide = "0.9"
lingua = { version = "1.8.0", default-features = false, features = ["english", "french", "german", "spanish", "polish"] }


fastembed = { version = "5", features = ["ort-download-binaries-native-tls", "hf-hub-native-tls"] }
ort = { version = "=2.0.0-rc.12" }

lance = { version = "8.0", default-features = false }
arrow = "58"
arrow-array = "58"
arrow-schema = "58"
lance-linalg = "8.0"
lance-index = "8.0"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_docs_in_private_items = "allow"
doc_markdown = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"